test/functions/iterators/bradc/iteratorBadError.good
iteratorBadError.chpl:1: In iterator 'iter':
iteratorBadError.chpl:2: error: 'startval' undeclared (first use this function)
