test/functions/iterators/bradc/iteratorBadError.future
iterator error messages

When an error occurs within an iterator, it is currently reported
multiple times and phrased in terms of the functions that the
compiler uses to rewrite the iterator.
